<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_pass_title"
        android:textStyle="bold"
        android:padding="16dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass_hint"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:padding="16dp" />

    <Button
        android:id="@+id/dialog_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_the_pass_button_text"
        android:layout_margin="16dp" />

</LinearLayout>