<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

   <com.google.android.material.button.MaterialButton
       android:id="@+id/iconImageWebsiteMenuOnWebsiteFragment"
       android:layout_width="60dp"
       android:layout_height="60dp"
       android:layout_marginTop="16dp"
       android:layout_marginEnd="16dp"
       android:layout_marginBottom="7dp"
       android:background="@android:color/transparent"
       android:src="@drawable/website_menu_button_image"
       app:icon="@drawable/website_menu_button_image"
       app:layout_constraintBottom_toTopOf="@+id/WebsiteNameTitle"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/UsersWebsiteName"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:ems="10"
       android:inputType=""
       android:text=""
       android:textColor="@color/white"
       app:layout_constraintBottom_toTopOf="@+id/WebsiteLoginTitle"
       app:layout_constraintEnd_toEndOf="@+id/WebsiteNameTitle"
       app:layout_constraintStart_toStartOf="@+id/WebsiteNameTitle"
       app:layout_constraintTop_toBottomOf="@+id/WebsiteNameTitle" />

   <TextView
       android:id="@+id/UsersWebsiteLogin"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:ems="10"
       android:inputType=""
       android:text=""
       android:textColor="@color/white"
       app:layout_constraintBottom_toTopOf="@+id/WebsitePasswordTitle"
       app:layout_constraintEnd_toEndOf="@+id/WebsiteLoginTitle"
       app:layout_constraintStart_toStartOf="@+id/WebsiteLoginTitle"
       app:layout_constraintTop_toBottomOf="@+id/WebsiteLoginTitle" />

   <TextView
       android:id="@+id/UsersWebsitePassword"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:ems="10"
       android:inputType=""
       android:text=""
       android:textColor="@color/white"
       app:layout_constraintBottom_toTopOf="@+id/WebsiteURLTitle"
       app:layout_constraintEnd_toEndOf="@+id/WebsitePasswordTitle"
       app:layout_constraintStart_toStartOf="@+id/WebsitePasswordTitle"
       app:layout_constraintTop_toBottomOf="@+id/WebsitePasswordTitle" />

   <TextView
       android:id="@+id/UsersWebsiteURL"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:autoLink="web"
       android:ems="10"
       android:inputType=""
       android:text=""
       android:textColor="@color/white"
       app:layout_constraintBottom_toTopOf="@+id/WebsiteDescriptionTitle"
       app:layout_constraintEnd_toEndOf="@+id/WebsiteURLTitle"
       app:layout_constraintStart_toStartOf="@+id/WebsiteURLTitle"
       app:layout_constraintTop_toBottomOf="@+id/WebsiteURLTitle" />

   <TextView
       android:id="@+id/UsersWebsiteDescription"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:ems="10"
       android:inputType=""
       android:text=""
       android:textColor="@color/white"
       app:layout_constraintBottom_toTopOf="@+id/buttonCopyPassword"
       app:layout_constraintEnd_toEndOf="@+id/WebsiteDescriptionTitle"
       app:layout_constraintStart_toStartOf="@+id/WebsiteDescriptionTitle"
       app:layout_constraintTop_toBottomOf="@+id/WebsiteDescriptionTitle" />

   <TextView
       android:id="@+id/WebsiteNameTitle"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginTop="54dp"
       android:layout_marginEnd="8dp"
       android:text="@string/website_title"
       android:textSize="@dimen/text_size_title"
       android:textColor="@color/white"
       app:layout_constraintBottom_toTopOf="@+id/UsersWebsiteName"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.04000002"
       app:layout_constraintVertical_chainStyle="packed" />

   <TextView
       android:id="@+id/WebsiteLoginTitle"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:text="@string/login_title"
       android:textSize="@dimen/text_size_title"
       android:textColor="@color/white"
       app:layout_constraintBottom_toTopOf="@+id/UsersWebsiteLogin"
       app:layout_constraintEnd_toEndOf="@+id/UsersWebsiteName"
       app:layout_constraintStart_toStartOf="@+id/UsersWebsiteName"
       app:layout_constraintTop_toBottomOf="@+id/UsersWebsiteName" />


   <TextView
       android:id="@+id/WebsitePasswordTitle"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:text="@string/password_title"
       android:textSize="@dimen/text_size_title"
       android:textColor="@color/white"
       app:layout_constraintBottom_toTopOf="@+id/UsersWebsitePassword"
       app:layout_constraintEnd_toEndOf="@+id/UsersWebsiteLogin"
       app:layout_constraintStart_toStartOf="@+id/UsersWebsiteLogin"
       app:layout_constraintTop_toBottomOf="@+id/UsersWebsiteLogin" />

   <TextView
       android:id="@+id/WebsiteURLTitle"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:text="@string/url_title"
       android:textSize="@dimen/text_size_title"
       android:textColor="@color/white"
       app:layout_constraintBottom_toTopOf="@+id/UsersWebsiteURL"
       app:layout_constraintEnd_toEndOf="@+id/UsersWebsitePassword"
       app:layout_constraintStart_toStartOf="@+id/UsersWebsitePassword"
       app:layout_constraintTop_toBottomOf="@+id/UsersWebsitePassword" />

   <TextView
       android:id="@+id/WebsiteDescriptionTitle"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:text="@string/description_title"
       android:textSize="@dimen/text_size_title"
       android:textColor="@color/white"
       app:layout_constraintBottom_toTopOf="@+id/UsersWebsiteDescription"
       app:layout_constraintEnd_toEndOf="@+id/UsersWebsiteURL"
       app:layout_constraintStart_toStartOf="@+id/UsersWebsiteURL"
       app:layout_constraintTop_toBottomOf="@+id/UsersWebsiteURL" />

   <TextView
       android:id="@+id/dateOfAdding"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginTop="8dp"
       android:textColor="@color/white"
       app:layout_constraintBottom_toTopOf="@+id/WebsiteNameTitle"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <androidx.constraintlayout.widget.Group
       android:id="@+id/group"
       android:layout_width="409dp"
       android:layout_height="128dp"
       app:constraint_referenced_ids="buttonCopyPassword,buttonCopyLogin"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent" />

   <Button
       android:id="@+id/buttonCopyPassword"
       android:layout_width="120dp"
       android:layout_height="64dp"
       android:layout_marginStart="8dp"
       android:layout_marginEnd="16dp"
       android:layout_marginBottom="32dp"
       android:text="@string/copy_password_button_text"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_weight="1"
       app:layout_constraintStart_toEndOf="@+id/buttonAutofill" />

   <Button
       android:id="@+id/buttonCopyLogin"
       android:layout_width="120dp"
       android:layout_height="64dp"
       android:layout_marginStart="16dp"
       android:layout_marginEnd="8dp"
       android:layout_marginBottom="32dp"
       android:text="@string/copy_login_button_text"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@+id/buttonAutofill"
       app:layout_constraintHorizontal_weight="1"
       app:layout_constraintStart_toStartOf="parent" />

   <Button
       android:id="@+id/buttonAutofill"
       android:layout_width="120dp"
       android:layout_height="64dp"
       android:layout_marginBottom="32dp"
       android:text="@string/to_website"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent" />

   <FrameLayout
       android:id="@+id/webViewContainer"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:visibility="gone">

      <WebView
          android:id="@+id/webView"
          android:layout_width="match_parent"
          android:layout_height="match_parent" />

   </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>